--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -55,7 +55,7 @@
                 <td>A delightful fusion of rich espresso, creamy vanilla ice cream, and a drizzle of chocolate syrup,
                     creating a decadent and refreshing treat.</td>
                 <td>$5.50</td>
-                <td><img src="../Media/CoffeeIce.png" alt="Ice Cream Coffee" width="100" height="100"></td>
+                <td><img src="../Media/CoffeeDrawing.png" alt="Ice Cream Coffee" width="100" height="100"></td>
             </tr>
             <tr>
                 <td>Hazelnut Coffee</td>
